--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html>
-   <head>
-      <title>My Cool Website</title>
-   </head>
-   <body>
-      <h1>Welcome to my website! ⭐️</h1>
-      <p>How was your day? 🎉</p>
-   </body>
-</html>
+<div>
+
+<iframe width="320" height="480" src="https://www.youtube.com/embed/K1V8pIv2ykg?si=7O8UMKufrO4YMRfE?&mute=1&autoplay=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/uPVmq3VZFaA?si=eSPdJzq5W-v_0XP8?&mute=1&autoplay=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Ko18SgceYX8?si=qlm5QAnFUaiHQprk?&mute=1&autoplay=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe src="https://player.vimeo.com/video/630640850?h=a6c711882a" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/630640850">Delta Spirit &#039;What&#039;s Done Is Done&#039;</a> from <a href="https://vimeo.com/parksranda">Michael Parks Randa</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<iframe src="https://player.twitch.tv/?channel=texasnewsstudiotv&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+
+</div>
+
+
+<style>
+
+body {
+  background-color: white;
+}
+div {
+  padding-top: 50px;
+
+  padding-bottom: 50px;
+
+  background-color:black;
+  color: white;
+}
+p{
+position: relative;
+  bottom: 0;
+  left: 0;
+	
+	
+}
+
+</style>
+
